--- a/_config.yml
+++ b/_config.yml
@@ -32,17 +32,17 @@ favicon: https://raw.githubusercontent.com/FromEndWorld/LOFFER/master/images/fav
 
 # 菜单中的按钮
 navigation:
-  - name: 首页
+  - name: Home
     url: /
-  - name: 关于
+  - name: About
     url: /about
-  - name: 归档
+  - name: Archive
     url: /archive
-  - name: 标签
+  - name: Tags
     url: /tags
 
 # 每页的文章数
-paginate: 8
+paginate: 5
 
 # 文章简介的区分标记
 excerpt_separator: <!-- more -->
@@ -66,7 +66,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # 站点页脚的文字
-footer-text: Copyright (c) 2019 来自中世界
+footer-text: Copyright (c) 2024 P&M
 
 #
 # 评论，注意，请不要同时添加多种不同的评论区
@@ -76,12 +76,12 @@ footer-text: Copyright (c) 2019 来自中世界
 disqus: loffer #shortname
 
 # 输入Gitalk相关设定，即可添加评论区，具体请看教程
-gitalk:
-  clientID: 
-  clientSecret: 
-  repo: 
-  owner: 
-  proxy:
+gitalk: 
+  clientID: Ov23liQVyVDXTormOkco
+  clientSecret: 38884c97b6679fcdc41fb3df1e0de74d05d5294c
+  repo: fpaulownia.github.io
+  owner: Fpaulownia
+  proxy: https://fpaulownia.github.io/
 
 # 输入Google Analytics web tracking code
 google_analytics:
